force-app/main/default/objects/Campaign_Promo_Line_Item__c/fields/Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Commission_Value__c</fullName>
    <formula>Promo_Line_Item__r.Commission_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>