force-app/main/default/objects/Campaign_Promo_Line_Item__c/fields/Is_Below_Threshold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Is_Below_Threshold_Amount__c</fullName>
    <formula>Quantity__c &lt;= Threshold_Amount__c</formula>
    <label>Is Below Threshold Amount</label>
    <type>Checkbox</type>
</CustomField>