force-app/main/default/objects/Campaign_Promo_Line_Item__c/fields/Item_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Group_Code__c</fullName>
    <formula>Promo_Line_Item__r.Item_Group_Code__c</formula>
    <label>Item Group Code</label>
    <type>Text</type>
</CustomField>