force-app/main/default/objects/Campaign_Promo_Line_Item__c/fields/Usual_Price__c.field-meta.xml
<CustomField>
    <fullName>Usual_Price__c</fullName>
    <formula>Promo_Line_Item__r.Usual_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>