force-app/main/default/objects/Campaign_Promo_Line_Item__c/fields/Variant_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Variant_Display_Name__c</fullName>
    <formula>Promo_Line_Item__r.Variant_Display_Name__c</formula>
    <label>Variant Display Name</label>
    <type>Text</type>
</CustomField>